# nlp_course

./: .env  .gitignore  404.html  LICENSE  README.md  README_DEV.md  conditional_probabilities.joblib  environment.yml  index.html  project.md  pyproject.toml  requirements.txt  setup.py  syllabus.md
.github/workflows/: deploy.yml
09-self_attention/: index.html
case_study_sentiment/: index.html
courseware/: mkdocs.yml
courseware/docs/: 09-self_attention.ipynb  case_study_sentiment.ipynb  final_project.md  index.md  math_of_lr.md  primer.md  topic_analysis.ipynb
experiments/: exemplo-embeddings.py  exemplo-mlp.ipynb  sklearn-to-pytorch.ipynb
final_project/: index.html
language_models/00-language_models_ngrams/: index.html
language_models/00a-solutions/: index.html
language_models/01-case_study_bullshit/: index.html
language_models/02-from_sklearn_to_pytorch/: index.html
language_models/03-end_to_end_neural_networks/: index.html
language_models/04-self_attention/: index.html
language_models/06-pretrained_bert/: index.html
language_models/07-finetuning_bert/: index.html
math_of_lr/: index.html
nlp_course/: __init__.py  crawler.py  main.py
notebooks/: 01-regex.ipynb  02-regex_opinion_mining.ipynb  02a-finding_content.ipynb  03-language_models_xx_century.ipynb  03a-PoS_tagging.ipynb  04-classifiers.ipynb  05-exploring_classifiers.ipynb  05-topics.ipynb  06-llms_and_classifiers.ipynb  movies_processed.csv
notebooks/llms/: 01-rag.md  (+1 more)
primer/: index.html
topic_analysis/: index.html
webserver/: app.py  vercel.json  webserver_activity.md
(+49 files in other folders)
