[project]
name = "nlp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.3",
    "bs4>=0.0.2",
    "datasets>=4.0.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pymdown-extensions>=10.16.1",
    "python-dotenv>=1.1.1",
    "python-markdown-math>=0.9",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
    "typer>=0.16.0",
]
